--- a/form.html
+++ b/form.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form</title>
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/dropdown.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/form.css">
 </head>
@@ -155,6 +156,7 @@
       </footer>
      
     <script src="js/form.js"></script>
+    <!-- <script src="js/app.js"></script> -->
 </body>
 
 </html>
