--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </nav>
     <div id="userData">
         <div class="dropdown">
-          <button onclick="getDataDrop()" class="dropbtn">User</button>
+          <button style="border-radius: 50%;" onclick="getDataDrop()" class="dropbtn"><i class="fas fa-user"></i></button>
           <div id="myDropdown" class="dropdown-content">
             <a id="nameUser"></a>
             <a id="ageUser"></a>
@@ -39,24 +39,6 @@
             <a id="WeightUser"></a>
           </div>
         </div>
-        <!-- <ul id="dropdown">
-          <h2 id="ageUser"></h2>
-          <h2 id="HeightUser"></h2>
-          <h2 id="WeightUser"></h2>
-        </ul> -->
-<!--         
-      <div class="dropdown">
-        <button onclick="myFunction()" class="dropbtn">Dropdown</button>
-        <div id="myDropdown" class="dropdown-content">
-          <a id="ageUser"></a>
-          <a id="HeightUser"></a>
-          <a id="WeightUser"></a>
-        </div>
-      </div> -->
-      
-
-
-
     </div>
   </header>
   <main>
