--- a/articles.html
+++ b/articles.html
@@ -7,7 +7,7 @@
     <title>Articles</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/dropdown.css">
- <link rel="stylesheet" href="assets/fontawesome/css/all.css">
+    <link rel="stylesheet" href="assets/fontawesome/css/all.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/articles.css">
 </head>
@@ -15,27 +15,16 @@
 <body>
     <header>
         <div class="img-container-header">
-          <a href="index.html"><img class="logo" src="assets/logo.png" alt=""></a>
+            <a href="index.html"><img class="logo" src="assets/logo.png" alt=""></a>
         </div>
         <nav>
-          <a href="index.html">Home</a>
-          <a href="#Art">Articles</a>
-          <a href="form.html">Healthy Weight</a>
-          <a href="aboutus.html">About us</a>
-          <a href="#contact">Contact Us</a>
+            <a href="index.html">Home</a>
+            <a href="articles.html">Articles</a>
+            <a href="form.html">Healthy Weight</a>
+            <a href="aboutus.html">About us</a>
+            <a href="index.html#contact">Contact Us</a>
         </nav>
-        <div id="userData">
-            <div class="dropdown">
-              <button onclick="getDataDrop()" class="dropbtn">User</button>
-              <div id="myDropdown" class="dropdown-content">
-                <a id="nameUser"></a>
-                <a id="ageUser"></a>
-                <a id="HeightUser"></a>
-                <a id="WeightUser"></a>
-              </div>
-            </div>
-        </div>
-      </header>
+    </header>
     <main>
 
         <div id="main">
@@ -445,7 +434,7 @@
                             <h4>The fundamentals of healthy eating</h4>
 
                             <div id="content32" class="content">
-                                <p><img src="img/art5.jpeg" alt="diet-sec-img" class="img">While some extreme diets may
+                                <p><img src="img/art6.jpeg" alt="diet-sec-img" class="img">While some extreme diets may
                                     suggest otherwise, we all need a balance of protein,
                                     fat,
                                     carbohydrates,
@@ -559,13 +548,12 @@
     </main>
     <footer>
         <div class="copy-rights">MAASH 2021 All Rights Reserved</div>
-        <div class="footer-link">Follow <a href="#"><i class="social-icon fab fa-github"></i></a>
-          <a href="#"><i class="social-icon fab fa-facebook"></i></a>
-          <a href="#"><i class="social-icon fab fa-twitter"></i></a>
+        <div class="footer-link">
+            <a href="https://github.com/FoodAwareness"><i class="social-icon fab fa-github"></i></a>
+            <a href="https://facebook.com"><i class="social-icon fab fa-facebook"></i></a>
+            <a href="https://twitter.com"><i class="social-icon fab fa-twitter"></i></a>
         </div>
-      </footer>
-      <script src="js/app.js"></script>
-    <!-- <script src="js/app.js"></script> -->
+    </footer>
 </body>
 
 </html>
