--- a/form.html
+++ b/form.html
@@ -18,10 +18,10 @@
         </div>
         <nav>
           <a href="index.html">Home</a>
-          <a href="#Art">Articles</a>
+          <a href="articles.html">Articles</a>
           <a href="form.html">Healthy Weight</a>
           <a href="aboutus.html">About us</a>
-          <a href="#contact">Contact Us</a>
+          <a href="index.html#contact">Contact Us</a>
         </nav>
       </header>
     <main>
@@ -154,10 +154,21 @@
     </div>
     </main>
     <footer>
+        <div class="footer-sub">
+          <div class="container-sub">
+            <div class="login_bar">
+              <input type="text" placeholder="   Your Email.." class="button-sub">
+              <span class="login"></span>
+              <span class="subscribe_button">Subscribe</span>
+              <span class="subscribing"></span>
+            </div>
+          </div>
+        </div>
         <div class="copy-rights">MAASH 2021 All Rights Reserved</div>
-        <div class="footer-link">Follow <a href="#"><i class="social-icon fab fa-github"></i></a>
-          <a href="#"><i class="social-icon fab fa-facebook"></i></a>
-          <a href="#"><i class="social-icon fab fa-twitter"></i></a>
+        <div class="footer-link">
+          <a href="https://github.com/FoodAwareness"><i class="social-icon fab fa-github"></i></a>
+          <a href="https://facebook.com"><i class="social-icon fab fa-facebook"></i></a>
+          <a href="https://twitter.com"><i class="social-icon fab fa-twitter"></i></a>
         </div>
       </footer>
      
