--- a/index.html
+++ b/index.html
@@ -205,12 +205,12 @@
 
           <form>
             <label for="fname">First Name</label>
-            <input type="text" id="fname" name="firstname" class="input-contact" placeholder="Your name.." required>
+            <input type="text" id="fname" name="firstname" class="input-contact" placeholder="Your name.." >
             <label for="lname">Last Name</label>
-            <input type="text" id="lname" name="lastname" class="input-contact" placeholder="Your last name.." required>
+            <input type="text" id="lname" name="lastname" class="input-contact" placeholder="Your last name.." >
             <label for="subject">Subject</label>
             <textarea id="subject" name="subject" class="input-contact" placeholder="Write something.."
-              style="height:200px" required></textarea>
+              style="height:200px" ></textarea>
             <input type="submit" id="sendMessage" value="Submit" class="confirm">
             <!-- The Modal -->
             <div id="myModal" class="modal">
