--- a/form.html
+++ b/form.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form</title>
+    <link rel="stylesheet" href="assets/fontawesome/css/all.css">
     <link rel="icon" href="assets/logo1.png">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/dropdown.css">
