--- a/index.html
+++ b/index.html
@@ -184,17 +184,23 @@
       <div class="contat-us-section">
 
         <div class="contact-info">
-          <iframe width="100%" height="300" frameborder="0" style="border:0"
-            src="https://maps.google.com/maps?q=Amman%20tabarbour&t=&z=7&ie=UTF8&iwloc=&output=embed" allowfullscreen>
-
-          </iframe>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d6774.6191590325825!2d35.869414!3d31.898185!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sjo!4v1611828805138!5m2!1sen!2sjo"
+            width="90%" height="300" allowfullscreen="" aria-hidden="false"></iframe>
           <div class="row-contact">
             <div class="col-md-12">
               <div class="site-heading-main">
-                <h2>Reach us</h2>
-                <div class="line-detail"><div class="social-back"><i class="fas fa-phone" style="font-size: 13px; margin: 4px;"></i></div><h5 class="contact-text-details">+ 962 0790 910 041</h5>
-              </div><br><div class="line-detail"><div class="social-back"><i class="far fa-envelope" style="font-size: 14px; font-weight: 600; margin: 4px;"></i></div><h5 class="contact-text-details">MAASH@example.com</h5>
-            </div></div>
+                <h2></h2>
+                <div class="line-detail">
+                  <div class="social-back"><i class="fas fa-phone" style="font-size: 13px; margin: 4px;"></i></div>
+                  <h5 class="contact-text-details">+ 962 0790 910 041</h5>
+                </div><br>
+                <div class="line-detail">
+                  <div class="social-back"><i class="far fa-envelope"
+                      style="font-size: 14px; font-weight: 600; margin: 4px;"></i></div>
+                  <h5 class="contact-text-details">MAASH@example.com</h5>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -204,12 +210,12 @@
 
           <form>
             <label for="fname">First Name</label>
-            <input type="text" id="fname" name="firstname" class="input-contact" placeholder="Your name.." >
+            <input type="text" id="fname" name="firstname" class="input-contact" placeholder="Your name..">
             <label for="lname">Last Name</label>
-            <input type="text" id="lname" name="lastname" class="input-contact" placeholder="Your last name.." >
+            <input type="text" id="lname" name="lastname" class="input-contact" placeholder="Your last name..">
             <label for="subject">Subject</label>
             <textarea id="subject" name="subject" class="input-contact" placeholder="Write something.."
-              style="height:200px" ></textarea>
+              style="height:200px"></textarea>
             <input type="submit" id="sendMessage" value="Submit" class="confirm">
             <!-- The Modal -->
             <div id="myModal" class="modal">
